# plaud-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  ffmpeg-pin.yml  live-canary.yml  release.yml
constraints/: linux.txt  macos.txt  windows.txt
docs/: AI-CLIENTS.md  CLI.md  INSTALL-METHODS.md  INSTALL.md  TROUBLESHOOTING.md  python-rewrite-status.md
docs/adr/: 001-python-rewrite.md  002-updater-uninstaller-install-script.md  003-mcp-process-lifecycle.md  004-install-layout-and-app-data.md  005-transport-resilience-and-retry.md  006-mcp-surface-v070-breaking-batch.md
docs/agents/: domain.md  issue-tracker.md  lockfiles.md  triage-labels.md
docs/issues/cli-completions/issues/: 01-shell-completions.md
docs/issues/cli-on-path/issues/: 01-add-cli-to-path.md
docs/issues/cli-version-flag/issues/: 01-add-version-flag.md
docs/plans/: 2026-06-12-audit-remediation-orchestration.md  2026-07-06-full-audit-and-remediation-plan.md
pyinstaller/: plaud-mcp.spec  plaud-tray.spec  plaud.spec  version_info.py
scripts/: ffmpeg_smoke.py  install.ps1  plaud_entry.py  plaud_mcp_entry.py  plaud_tray_entry.py  pt.cmd
src/plaud_tools/: __init__.py  __main__.py  ai_clients.py  appdata.py  auth.py  cli.py  client.py  doctor.py  errors.py  layout.py  mcp.py  mcp_lifecycle.py  models.py  ps1_templates.py  query.py  server.py  session.py  transcode.py  transport.py  tray_app.py
src/plaud_tools/cli/: __init__.py  cli.py  doctor.py  process_probe.py
src/plaud_tools/completions/: _plaud_tools  plaud-tools.bash  plaud-tools.ps1
src/plaud_tools/core/: __init__.py  ai_clients.py  errors.py  layout.py  models.py
src/plaud_tools/mcp_pt/: __init__.py  mcp.py  server.py
src/plaud_tools/scripts/: uninstall.ps1  update.ps1
src/plaud_tools/tray/: __init__.py  app.py  background.py  com_activation.py  icons.py  process_launch.py  ps1_templates.py  setup.py  toasts.py  uninstaller.py  updater.py
src/plaud_tools/tray/scripts/: uninstall.ps1
src/plaud_tools/tray/windows/: __init__.py  home.py  login.py  wizard.py
tests/: conftest.py  test_ai_clients.py  test_appdata.py  test_auth.py  test_client.py  test_conftest_safety.py  test_diagnose_enum.py  test_doctor.py  test_errors.py  test_homewindow_session_label.py  test_homewindow_setup_failures.py  test_incremental_browse.py  test_install_ps1.py  test_interfaces.py  test_layout.py  test_lifecycle_helpers.py  test_live_integration.py  test_login_window.py  test_mcp_error_codes.py  test_mcp_golden.py  test_mcp_lifecycle.py  test_mcp_wave4_surface.py  test_process_launch.py  test_ps1_templates.py  test_query.py  test_server.py  test_session_cache_freshness.py  test_session_diagnose.py  test_session_hardening.py  test_session_token_buffer.py  test_transport.py  test_tray_async_widget_crash.py  test_tray_background.py  test_tray_correctness.py  test_tray_env.py  test_tray_expiry_ux.py  test_tray_first_run.py  test_tray_mutex.py  test_uninstall_dialog.py  test_updater_checksum.py  (+4 more)
tests/data/: tool_descriptions.golden.json
